<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:text="@string/Social_Connections"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/hostButton"
        android:layout_width="280dp"
        android:layout_height="64dp"
        android:text="@string/host_connection" />

    <Button
        android:id="@+id/connectButton"
        android:layout_width="280dp"
        android:layout_height="64dp"
        android:layout_marginBottom="50dp"
        android:text="@string/connect_to_host" />

    <TextView
        android:id="@+id/friendTextView"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:text="@string/add_friend"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/hostFriend"
        android:layout_width="280dp"
        android:layout_height="64dp"
        android:text="@string/host_friend" />
    <Button
        android:id="@+id/clientFriend"
        android:layout_width="280dp"
        android:layout_height="64dp"
        android:text="@string/client_friend" />

    <Button
        android:id="@+id/seedDebugButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Seed Debug Graph"
        android:visibility="visible" />

</LinearLayout>